--- a/form.html
+++ b/form.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="form.css">
 </head>
 <body>
-    
-    <form action="" class="form">
+    <form action="Submit" class="form">
         <label for="username">Username</label>
-        <input type="text" name="username" id="username" placeholder="Enter Your Username">
+        <input type="text" name="username" id="username" placeholder="Enter Your Username" required>
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" placeholder="Enter Your Password" >
+        <input type="password" name="password" id="password" placeholder="Enter Your Password" required >
         <label for="Remember me" class="label-1">Remember Me</label>
-        <input type="checkbox" name="" id="">
-        <input type="button" value="Submit" class="btn">
-         <!-- <button type="submit">Submit</button> -->
+        <input type="checkbox" name="" id="" required>
+        <!-- <input type="button" value="Submit" class="btn"> -->
+         <button type="submit">Submit</button>
     </form>
 </body>
 </html>
