style add for login

--- a/login.html
+++ b/login.html
@@ -17,9 +17,10 @@
         <div>
         <span>Don't have an account?</span>
         <a href="signup.html" class="sign-up">Sign up</a>
+        </div>
         <div class="btn">
-        <button type="button" class="Facebook"><i class="fa-brands fa-facebook fa-2xl" ></i>Login With Facebook</button>
-        <button type="button"><i class="fa-brands fa-github fa-2xl"></i>Login With GitHub</button>
+        <button type="button" class="Facebook"><i class="fa-brands fa-facebook fa-xl" ></i>Login With Facebook</button>
+        <button type="button" class="github"><i class="fa-brands fa-github fa-xl" style="color: #0c0c0d;"></i>Login With GitHub</button>
         </div>
     </form>
 </body>
