--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
         <a href="login.html" class="sign-up">Login</a>
         <div class="btn">
         <button type="button" class="Facebook"><i class="fa-brands fa-facebook fa-2xl" ></i>Login With Facebook</button>
-        <button type="button"><i class="fa-brands fa-github fa-2xl" style="color: #0c0c0d;"></i></i>Login With GitHub</button>
+        <button type="button" class="github"><i class="fa-brands fa-github fa-2xl" style="color: #0c0c0d;"></i></i>Login With GitHub</button>
         </div>
     </form>
 </body>
