--- a/signup.html
+++ b/signup.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>SignUp</title>
     <link rel="stylesheet" href="sign.css">
 </head>
+
 <body>
     <form action="Submit">
         <h2>Sign Up</h2>
         <input type="email" name="email" id="email" placeholder="Email" required>
         <input type="password" name="password" id="password" placeholder="Create password" required>
         <input type="password" name="password" id="password" placeholder="Confirm password" required>
-    <button>signup</button>
+        <button>signup</button>
         <div>
-        <span>Already have an account?</span>
-        <a href="login.html" class="sign-up">Login</a>
-        <div class="btn">
-        <button type="button" class="Facebook"><i class="fa-brands fa-facebook fa-2xl" ></i>Login With Facebook</button>
-        <button type="button" class="github"><i class="fa-brands fa-github fa-2xl" style="color: #0c0c0d;"></i></i>Login With GitHub</button>
-        </div>
+            <span>Already have an account?</span>
+            <a href="login.html" class="sign-up">Login</a>
+            <div class="btn">
+                <button type="button" class="Facebook"><i class="fa-brands fa-facebook fa-2xl"></i>Login With
+                    Facebook</button>
+                <button type="button" class="github"><i class="fa-brands fa-github fa-2xl"
+                        style="color: #0c0c0d;"></i></i>Login With GitHub</button>
+            </div>
     </form>
 </body>
 
